Adding a 2 week smoothing to TMY

--- a/main_analysis/prep_TMY_wind_and_solar_profiles.ipynb
+++ b/main_analysis/prep_TMY_wind_and_solar_profiles.ipynb
@@ -73,13 +73,46 @@
     "    \n",
     "    df.to_csv(f\"../{ba_info[resource][0]}\".replace('.csv', '_TMY.csv'), index=False)\n",
     "\n",
+    "def multi_week_avgs(ba, resource, shifts_min, shifts_max, years):\n",
+    "    \n",
+    "    ba_info = return_file_info_map( ba )\n",
+    "    df = pd.read_csv(f\"../{ba_info[resource][0]}\".replace('.csv', '_TMY.csv'))\n",
+    "    var = 'w_cfs' if 'w_cfs' in df.columns else 's_cfs'\n",
+    "    df[f'{var}2'] = np.zeros(len(df.index))\n",
+    "    n_shifts = 0\n",
+    "    for i in range(shifts_min, shifts_max+1):\n",
+    "        print(i, 24*i)\n",
+    "        df[f'{var}2'] += df[var].shift(periods=24*i)\n",
+    "        n_shifts += 1\n",
+    "    df[f'{var}2'] = df[f'{var}2'] / n_shifts\n",
+    "    \n",
+    "    # Fix ends where shifts returned NAN values\n",
+    "    for yr in [years[0], years[-1]]:\n",
+    "        print(yr)\n",
+    "        if calendar.isleap(yr):\n",
+    "            print(f'Is leap {yr}')\n",
+    "            tgt_yr = yr + 4 if yr + 4 in years else yr - 4\n",
+    "        if not calendar.isleap(yr):\n",
+    "            print(f'Is not leap {yr}')\n",
+    "            tgt_yr = yr + 1 if yr + 1 in years else yr - 1\n",
+    "        print(tgt_yr)\n",
+    "        df.loc[ df['year'] == yr, f'{var}2' ] = df.loc[ df['year'] == tgt_yr, f'{var}2' ].values\n",
+    "    \n",
+    "    # Drop normal CF column\n",
+    "    to_save = df\n",
+    "    to_save = to_save.drop([var,], axis=1)\n",
+    "    to_save = to_save.rename(columns = {f'{var}2':var})\n",
+    "    to_save.to_csv(f\"../{ba_info[resource][0]}\".replace('.csv', '_TMY2.csv'), index=False)\n",
+    "    return df\n",
+    "    \n",
     "years = range(1990, 2020)\n",
     "for resource in ['wind', 'solar']:\n",
     "    for ba in ['ERCOT', 'PJM', 'NYISO', 'FR']:\n",
     "        df = get_resource_file(ba, resource)\n",
     "        df = drop_leap_days(df)\n",
     "        tmy = calc_TMY_profile(df, years)\n",
-    "        distribute_TMY(ba, resource, tmy, years)"
+    "        distribute_TMY(ba, resource, tmy, years)\n",
+    "        df = multi_week_avgs(ba, resource, -7, 7, years)"
    ]
   },
   {
@@ -89,8 +122,22 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(15,3))\n",
-    "ax.plot(tmy)\n",
-    "ax.plot(df.loc[df['year']==2019, 'w_cfs'].values, alpha=.3)\n",
+    "#ax.plot(tmy)\n",
+    "ax.plot(df.loc[df['year']==2019, 'w_cfs'].values)\n",
+    "ax.plot(df.loc[df['year']==2019, 'w_cfs2'].values, alpha=.5)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(15,3))\n",
+    "#ax.plot(tmy)\n",
+    "ax.plot(df.loc[(df['year']==2019) & (df['month']==7), 'w_cfs'].values)\n",
+    "ax.plot(df.loc[(df['year']==2019) & (df['month']==7), 'w_cfs2'].values, alpha=.5)\n",
     "plt.show()"
    ]
   },
