--- a/temperature_analysis/plot_CDD_and_HDD_scatter.ipynb
+++ b/temperature_analysis/plot_CDD_and_HDD_scatter.ipynb
@@ -169,7 +169,7 @@
     "    ax.set_ylabel('Normalized daily peak demand')\n",
     "    ax.set_xlim(-40,20)\n",
     "    ax.set_ylim(.6, 2.0)\n",
-    "    plt.savefig(f'{ba}_degree_days_vs_pk_demand.pdf')\n",
+    "    plt.savefig(f'plots/{ba}_degree_days_vs_pk_demand.pdf')\n",
     "\n",
     "    corrs = analyze(ba, dy)\n",
     "    all_corrs.append(corrs)\n",
@@ -181,7 +181,7 @@
     "ax.set_xlabel('Correlation of Degree Days vs. peak demand')\n",
     "ax.set_ylabel('Occurances')\n",
     "plt.legend()\n",
-    "plt.savefig(f'degree_days_vs_pk_demand_corr.pdf')\n",
+    "plt.savefig(f'plots/degree_days_vs_pk_demand_corr.pdf')\n",
     "    "
    ]
   },
