--- a/main_analysis/prep_TMY_wind_and_solar_profiles.ipynb
+++ b/main_analysis/prep_TMY_wind_and_solar_profiles.ipynb
@@ -104,15 +104,18 @@
     "    to_save = to_save.rename(columns = {f'{var}2':var})\n",
     "    to_save.to_csv(f\"../{ba_info[resource][0]}\".replace('.csv', '_TMY2.csv'), index=False)\n",
     "    return df\n",
-    "    \n",
+    "\n",
+    "dfs = {}\n",
     "years = range(1990, 2020)\n",
     "for resource in ['wind', 'solar']:\n",
+    "    dfs[resource] = {}\n",
     "    for ba in ['ERCOT', 'PJM', 'NYISO', 'FR']:\n",
     "        df = get_resource_file(ba, resource)\n",
     "        df = drop_leap_days(df)\n",
     "        tmy = calc_TMY_profile(df, years)\n",
     "        distribute_TMY(ba, resource, tmy, years)\n",
-    "        df = multi_week_avgs(ba, resource, -7, 7, years)"
+    "        df = multi_week_avgs(ba, resource, -7, 7, years)\n",
+    "        dfs[resource][ba] = df"
    ]
   },
   {
@@ -121,24 +124,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(15,3))\n",
-    "#ax.plot(tmy)\n",
-    "ax.plot(df.loc[df['year']==2019, 'w_cfs'].values)\n",
-    "ax.plot(df.loc[df['year']==2019, 'w_cfs2'].values, alpha=.5)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(figsize=(15,3))\n",
-    "#ax.plot(tmy)\n",
-    "ax.plot(df.loc[(df['year']==2019) & (df['month']==7), 'w_cfs'].values)\n",
-    "ax.plot(df.loc[(df['year']==2019) & (df['month']==7), 'w_cfs2'].values, alpha=.5)\n",
-    "plt.show()"
+    "for ba in ['ERCOT', 'PJM', 'NYISO', 'FR']:\n",
+    "    print(ba)\n",
+    "    for r, n in {'wind':'w', 'solar':'s'}.items():\n",
+    "        df = dfs[r][ba]\n",
+    "        for mo in range(1, 13):\n",
+    "    \n",
+    "            fig, ax = plt.subplots(figsize=(20,6), facecolor='white')\n",
+    "            #ax.plot(tmy)\n",
+    "            ax.plot(df.loc[(df['year']==2019) & (df['month']==mo), f'{n}_cfs'].values)\n",
+    "            ax.plot(df.loc[(df['year']==2019) & (df['month']==mo), f'{n}_cfs2'].values, alpha=.5)\n",
+    "            ax.set_ylim(0, 1)\n",
+    "            plt.title(f\"{ba}, {r}, month={mo}\")\n",
+    "            plt.savefig(f\"plots/cfs/{r}/{ba}_mo{mo}.png\")"
    ]
   },
   {
