Adjust for lost and gained hours in France (DST on/off)

--- a/load_data/FR_demand_prep.ipynb
+++ b/load_data/FR_demand_prep.ipynb
@@ -29,8 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('consommation-quotidienne-brute-elec_FR2.csv')\n",
-    "df['date_time'] = pd.to_datetime(df['Date - Heure'])"
+    "df = pd.read_csv('consommation-quotidienne-brute-elec_FR2.csv')"
    ]
   },
   {
@@ -39,11 +38,219 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date - Heure</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Heure</th>\n",
+       "      <th>Consommation (MW)</th>\n",
+       "      <th>date_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2007-12-31T18:00:00-05:00</td>\n",
+       "      <td>1/1/08</td>\n",
+       "      <td>0:00</td>\n",
+       "      <td>67027.829</td>\n",
+       "      <td>2007-12-31 23:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2007-12-31T18:30:00-05:00</td>\n",
+       "      <td>1/1/08</td>\n",
+       "      <td>0:30</td>\n",
+       "      <td>65611.626</td>\n",
+       "      <td>2007-12-31 23:30:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2007-12-31T19:00:00-05:00</td>\n",
+       "      <td>1/1/08</td>\n",
+       "      <td>1:00</td>\n",
+       "      <td>63949.610</td>\n",
+       "      <td>2008-01-01 00:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2007-12-31T19:30:00-05:00</td>\n",
+       "      <td>1/1/08</td>\n",
+       "      <td>1:30</td>\n",
+       "      <td>64198.337</td>\n",
+       "      <td>2008-01-01 00:30:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2007-12-31T20:00:00-05:00</td>\n",
+       "      <td>1/1/08</td>\n",
+       "      <td>2:00</td>\n",
+       "      <td>64190.632</td>\n",
+       "      <td>2008-01-01 01:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192859</th>\n",
+       "      <td>2018-12-31T15:30:00-05:00</td>\n",
+       "      <td>12/31/18</td>\n",
+       "      <td>21:30</td>\n",
+       "      <td>60580.000</td>\n",
+       "      <td>2018-12-31 20:30:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192860</th>\n",
+       "      <td>2018-12-31T16:00:00-05:00</td>\n",
+       "      <td>12/31/18</td>\n",
+       "      <td>22:00</td>\n",
+       "      <td>59901.000</td>\n",
+       "      <td>2018-12-31 21:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192861</th>\n",
+       "      <td>2018-12-31T16:30:00-05:00</td>\n",
+       "      <td>12/31/18</td>\n",
+       "      <td>22:30</td>\n",
+       "      <td>60939.000</td>\n",
+       "      <td>2018-12-31 21:30:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192862</th>\n",
+       "      <td>2018-12-31T17:00:00-05:00</td>\n",
+       "      <td>12/31/18</td>\n",
+       "      <td>23:00</td>\n",
+       "      <td>63977.000</td>\n",
+       "      <td>2018-12-31 22:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192863</th>\n",
+       "      <td>2018-12-31T17:30:00-05:00</td>\n",
+       "      <td>12/31/18</td>\n",
+       "      <td>23:30</td>\n",
+       "      <td>63803.000</td>\n",
+       "      <td>2018-12-31 22:30:00+00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>192864 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Date - Heure      Date  Heure  Consommation (MW)  \\\n",
+       "0       2007-12-31T18:00:00-05:00    1/1/08   0:00          67027.829   \n",
+       "1       2007-12-31T18:30:00-05:00    1/1/08   0:30          65611.626   \n",
+       "2       2007-12-31T19:00:00-05:00    1/1/08   1:00          63949.610   \n",
+       "3       2007-12-31T19:30:00-05:00    1/1/08   1:30          64198.337   \n",
+       "4       2007-12-31T20:00:00-05:00    1/1/08   2:00          64190.632   \n",
+       "...                           ...       ...    ...                ...   \n",
+       "192859  2018-12-31T15:30:00-05:00  12/31/18  21:30          60580.000   \n",
+       "192860  2018-12-31T16:00:00-05:00  12/31/18  22:00          59901.000   \n",
+       "192861  2018-12-31T16:30:00-05:00  12/31/18  22:30          60939.000   \n",
+       "192862  2018-12-31T17:00:00-05:00  12/31/18  23:00          63977.000   \n",
+       "192863  2018-12-31T17:30:00-05:00  12/31/18  23:30          63803.000   \n",
+       "\n",
+       "                       date_time  \n",
+       "0      2007-12-31 23:00:00+00:00  \n",
+       "1      2007-12-31 23:30:00+00:00  \n",
+       "2      2008-01-01 00:00:00+00:00  \n",
+       "3      2008-01-01 00:30:00+00:00  \n",
+       "4      2008-01-01 01:00:00+00:00  \n",
+       "...                          ...  \n",
+       "192859 2018-12-31 20:30:00+00:00  \n",
+       "192860 2018-12-31 21:00:00+00:00  \n",
+       "192861 2018-12-31 21:30:00+00:00  \n",
+       "192862 2018-12-31 22:00:00+00:00  \n",
+       "192863 2018-12-31 22:30:00+00:00  \n",
+       "\n",
+       "[192864 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add_dts(df):\n",
+    "    \n",
+    "\n",
+    "    dts = []\n",
+    "    for i, idx in enumerate(df.index):\n",
+    "        dt_str = df.loc[idx, 'Date - Heure']\n",
+    "        adj = int(dt_str[-5:].split(':')[0])\n",
+    "        if dt_str[-6:-5] == '-':\n",
+    "            adj = adj * -1\n",
+    "    \n",
+    "        naive = datetime.strptime(dt_str[:-6], '%Y-%m-%dT%H:%M:%S')\n",
+    "        \n",
+    "        if adj == -5: # Eastern Standard Time\n",
+    "            is_dst_now = False\n",
+    "        if adj == -4: # Eastern Daylight Time\n",
+    "            is_dst_now = True\n",
+    "        \n",
+    "        local = pytz.timezone('US/Eastern') # Not sure why France reports in US/Eastern time\n",
+    "        local_dt = local.localize(naive, is_dst=is_dst_now)\n",
+    "        utc_dt = local_dt.astimezone(pytz.utc)\n",
+    "        #print(utc_dt)\n",
+    "        dts.append(utc_dt)\n",
+    "        \n",
+    "    return(dts)\n",
+    "    \n",
+    "\n",
+    "df['date_time'] = add_dts(df)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start time 2007-12-31 18:00:00-05:00\n",
-      "Last appended 2018-12-31 22:00:00+00:00: 63890.0\n"
+      "Start time 2007-12-31 23:00:00+00:00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
      ]
     }
    ],
@@ -58,9 +265,11 @@
     "        if df.loc[idx, 'date_time'].minute == 30:\n",
     "            continue\n",
     "       \n",
-    "        date_times.append(df.loc[idx, 'date_time'].astimezone(pytz.utc)) # Report at end of hour like all others\n",
+    "        date_times.append(df.loc[idx, 'date_time']) # Report at end of hour like all others\n",
     "        # avg of each 30 min slice\n",
-    "        vals.append( (df.loc[idx, 'Consommation (MW)'] + df.loc[idx+1, 'Consommation (MW)']) / 2. ) \n",
+    "        vals.append( (df.loc[idx, 'Consommation (MW)'] + df.loc[idx+1, 'Consommation (MW)']) / 2. )\n",
+    "    print(date_times)\n",
+    "    print(vals)\n",
     "    print(f\"Last appended {date_times[-1]}: {vals[-1]}\")\n",
     "    tmp_df = pd.DataFrame({\n",
     "        'date_time':date_times,\n",
@@ -82,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +306,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe7e0c05670>]"
+       "[<matplotlib.lines.Line2D at 0x7f21bd4b0880>]"
       ]
      },
      "execution_count": 6,
@@ -130,7 +339,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe7dcd0ca60>]"
+       "[<matplotlib.lines.Line2D at 0x7f21e1f85760>]"
       ]
      },
      "execution_count": 7,
@@ -154,13 +363,6 @@
     "fig, ax = plt.subplots(figsize=(15,5))\n",
     "plt.plot(tmp_df.loc[0:20000, 'date_time'], tmp_df.loc[0:20000, 'demand (MW)'].rolling(24).max())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
