--- a/temperature_analysis/plot_CDD_and_HDD_scatter.ipynb
+++ b/temperature_analysis/plot_CDD_and_HDD_scatter.ipynb
@@ -218,7 +218,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "BAs = ['ERCOT', 'PJM', 'NYISO', 'FR']\n",
     "fig, axs = plt.subplots(figsize=(8.5, 2.5), nrows=1, ncols=4, sharey=True, sharex=True)\n",
     "outs = []\n",
@@ -265,15 +264,16 @@
     "#plt.tight_layout()\n",
     "plt.savefig(f'plots/ALL_degree_days_vs_pk_demand.pdf')\n",
     "\n",
-    "\n",
+    "hatchs = ['///', 'xxx', '---', '\\\\',  ]\n",
+    "types = ['stepfilled', 'stepfilled', 'stepfilled', 'stepfilled'] # 'step', 'step', \n",
     "\n",
     "bins = np.arange(0.0, 1.01, 0.025)\n",
     "fig, ax = plt.subplots(figsize=(4, 3))\n",
     "for i, ba in enumerate(BAs):\n",
-    "    ax.hist(all_corrs[i][0], bins, label=BAs[i], alpha=0.5)\n",
+    "    ax.hist(all_corrs[i][0], bins, label=BAs[i], alpha=0.25, histtype=types[i], hatch=hatchs[i], linewidth=3)\n",
     "ax.set_xlabel('correlation of daily cooling degree days\\nvs. daily peak demand per year')\n",
     "ax.set_ylabel('number of years')\n",
-    "plt.legend()\n",
+    "plt.legend(loc='upper left')\n",
     "plt.text(-0.05, 6.5, 'a)', weight=\"bold\", size=14)\n",
     "plt.tight_layout()\n",
     "plt.savefig(f'plots/degree_days_vs_pk_demand_corr.pdf')\n",
@@ -281,7 +281,7 @@
     "bins = np.arange(-1.0, 0.01, 0.025)\n",
     "fig, ax = plt.subplots(figsize=(4, 3))\n",
     "for i, ba in enumerate(BAs):\n",
-    "    ax.hist(all_corrs[i][1], bins, label=BAs[i], alpha=0.5)\n",
+    "    ax.hist(all_corrs[i][1], bins, label=BAs[i], alpha=0.25, histtype=types[i], hatch=hatchs[i], linewidth=3)\n",
     "ax.set_xlabel('correlation of daily heating degree days\\nvs. daily peak demand per year')\n",
     "ax.set_ylabel('number of years')\n",
     "plt.legend()\n",
