Leslie's recommendation for x labeling

--- a/temperature_analysis/plot_CDD_and_HDD_scatter.ipynb
+++ b/temperature_analysis/plot_CDD_and_HDD_scatter.ipynb
@@ -271,7 +271,7 @@
     "fig, ax = plt.subplots(figsize=(4, 3))\n",
     "for i, ba in enumerate(BAs):\n",
     "    ax.hist(all_corrs[i][0], bins, label=BAs[i], alpha=0.25, histtype=types[i], hatch=hatchs[i], linewidth=3)\n",
-    "ax.set_xlabel('correlation of daily cooling degree days\\nvs. daily peak demand per year')\n",
+    "ax.set_xlabel('correlation of daily cooling degree days\\nwith daily peak demand per year')\n",
     "ax.set_ylabel('number of years')\n",
     "plt.legend(loc='upper left')\n",
     "plt.text(-0.05, 6.5, 'a)', weight=\"bold\", size=14)\n",
@@ -282,7 +282,7 @@
     "fig, ax = plt.subplots(figsize=(4, 3))\n",
     "for i, ba in enumerate(BAs):\n",
     "    ax.hist(all_corrs[i][1], bins, label=BAs[i], alpha=0.25, histtype=types[i], hatch=hatchs[i], linewidth=3)\n",
-    "ax.set_xlabel('correlation of daily heating degree days\\nvs. daily peak demand per year')\n",
+    "ax.set_xlabel('correlation of daily heating degree days\\nwith daily peak demand per year')\n",
     "ax.set_ylabel('number of years')\n",
     "plt.legend()\n",
     "plt.text(-1.05, 6.5, 'b)', weight=\"bold\", size=14)\n",
